--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-ejs-extend": "0.0.1",
     "express-flash": "0.0.2",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
@@ -31,6 +32,7 @@
     "mysql": "^2.18.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "socket.io": "^4.3.1"
   },
   "devDependencies": {
